external-crates/move/crates/move-compiler/tests/move_2024/parser/multi_module_invalid_1.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_2024/parser/multi_module_invalid_1.move:7:18
  │
4 │ extend module a::n { }
  │                  - Previous module defined here
  ·
7 │ extend module a::p;
  │                  ^ Cannot define an additional 'module' via label in a file with multiple modules
  │
  = Either move each 'module' into its own file or define each addiitional module as 'module <name> { contents }'
